--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ url: "https://www.bruteforcesec.com/" # the base hostname & protocol for your si
 
 # Banner Section
 hero: 112.jpg
-hero-title: Welcome to Lokmont
-hero-description: A Responsive Jekyll Blog Theme. Theme suitable for any kind of creators.
+hero-title: Brute Force Information Security Services
+hero-description: Brute Force Information Security Services
 
 # Author - Creator
 author-name: Ben Campbell
